# Logica2026

./: pu.sh
IoTClase06/: Dockerfile  Requirements.txt  docker-compose.yml  env  main.py  pyproject.toml
IoTMedicamentos/: README (1).md  cargador_csv.py  env  horariosmedicamentos.csv  main.py  medicamento.py  notificador.py  requirements.txt
pdf_tooloffice/: Dockerfile  Flujo PDF tools  README.md  docker-compose.yml  requirements.txt
pdf_tooloffice/app/: Dockerfile  __init__.py  cleanup.py  database.py  requirements.txt  routes.py  services.py
pdf_tooloffice/app/static/css/: style.css
pdf_tooloffice/app/static/js/: main.js
pdf_tooloffice/app/templates/: index.html
